--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/preset-env": "^7.8.6",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-angular": "^8.3.4",
+    "baconjs": "^3.0.12",
     "callbag-basics": "^3.2.0",
     "chai": "^4.2.0",
     "commitizen": "^4.0.3",
