--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "karma-mocha": "^1.3.0",
     "karma-sinon-chai": "^2.0.2",
     "karma-webpack": "^4.0.2",
+    "kefir": "^3.8.6",
     "load-grunt-config": "^3.0.1",
     "mocha": "^7.1.0",
     "rollup": "^1.32.0",
