--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.8.7",
-    "rxjs-interop": "0.0.1-beta.3",
+    "rxjs-interop": "^1.0.0",
     "tslib": "^1.11.1"
   },
   "description": "A collection of reactive wrappers for various browser APIs.",
