--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "rollup": "^2.1.0",
     "rollup-plugin-babel": "^4.4.0",
     "rxjs": "^6.5.4",
+    "rxjs-for-await": "0.0.1",
     "sinon": "^9.0.1",
     "sinon-chai": "^3.5.0",
     "ts-loader": "^6.2.1",
