--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "kefir": "^3.8.7",
     "load-grunt-config": "^3.0.1",
     "mocha": "^8.0.1",
+    "prettier": "^2.0.5",
     "rollup": "^2.15.0",
     "rollup-plugin-babel": "^4.4.0",
     "rxjs": "^6.5.5",
