--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@commitlint/cli": "^9.1.1",
         "@commitlint/config-angular": "^9.1.1",
         "baconjs": "^3.0.13",
+        "body-parser": "^1.19.0",
         "callbag-basics": "^3.2.0",
         "chai": "^4.2.0",
         "commitizen": "^4.1.2",
