--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "karma-chrome-launcher": "^3.1.0",
         "karma-firefox-launcher": "^2.1.0",
         "karma-mocha": "^2.0.1",
+        "karma-safari-launcher": "^1.0.0",
         "karma-sinon-chai": "^2.0.2",
         "karma-webpack": "^4.0.2",
         "kefir": "^3.8.8",
