--- a/package.json
+++ b/package.json
@@ -68,12 +68,6 @@
         "src/"
     ],
     "homepage": "https://github.com/chrisguttandin/subscribable-things",
-    "husky": {
-        "hooks": {
-            "commit-msg": "commitlint --edit --extends @commitlint/config-angular",
-            "pre-commit": "pretty-quick --config config/prettier/config.json --staged && grunt lint"
-        }
-    },
     "keywords": [
         "browser",
         "observables",
@@ -89,6 +83,7 @@
         "url": "https://github.com/chrisguttandin/subscribable-things.git"
     },
     "scripts": {
+        "prepare": "husky install",
         "prepublishOnly": "grunt build",
         "test": "grunt lint && grunt test"
     },
