--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "rxjs-for-await": "0.0.2",
         "sinon": "^11.1.2",
         "sinon-chai": "^3.7.0",
+        "spect": "^23.1.1",
         "ts-loader": "^9.2.6",
         "tsconfig-holy-grail": "^11.1.18",
         "tslint": "^6.1.3",
