--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
         "pretty-quick": "^3.1.1",
         "rollup": "^2.60.0",
         "rxjs": "^7.4.0",
-        "rxjs-for-await": "0.0.2",
+        "rxjs-for-await": "^1.0.0",
         "sinon": "^11.1.2",
         "sinon-chai": "^3.7.0",
         "spect": "^23.1.1",
