--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "karma-firefox-launcher": "^2.1.2",
         "karma-mocha": "^2.0.1",
         "karma-sinon-chai": "^2.0.2",
+        "karma-webkit-launcher": "^2.1.0",
         "karma-webpack": "^5.0.0",
         "kefir": "^3.8.8",
         "load-grunt-config": "^4.0.1",
