--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     ],
     "dependencies": {
         "@babel/runtime": "^7.22.6",
+        "linked": "^0.2.0",
         "rxjs-interop": "^2.0.0",
         "tslib": "^2.6.1"
     },
     "description": "A collection of reactive wrappers for various browser APIs.",
     "devDependencies": {
-        "@babel/core": "^7.22.17",
+        "@babel/core": "^7.22.19",
         "@babel/plugin-external-helpers": "^7.22.5",
         "@babel/plugin-transform-runtime": "^7.22.15",
         "@babel/preset-env": "^7.22.15",
