--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "karma-webkit-launcher": "^2.1.0",
         "karma-webpack": "^5.0.0",
         "kefir": "^3.8.8",
+        "lint-staged": "^15.1.0",
         "load-grunt-config": "^4.0.1",
         "midi-test": "^1.2.7",
         "mocha": "^10.2.0",
