--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,9 @@ jobs:
             - name: Checkout repository
               uses: actions/checkout@v3
 
+            - name: Install Python dependencies
+              run: python -m pip install --upgrade packaging pip setuptools
+
             - name: Install Node.js ${{ matrix.node-version }}
               uses: actions/setup-node@v3
               with:
