--- a/package.json
+++ b/package.json
@@ -97,7 +97,9 @@
         "lint:test": "eslint --config config/eslint/test.json --ext .js --report-unused-disable-directives test/",
         "prepare": "husky",
         "prepublishOnly": "npm run build",
-        "test": "npm run lint && grunt test"
+        "test": "npm run lint && grunt test",
+        "test:integration": "karma start config/karma/config-integration.js --single-run",
+        "test:unit": "karma start config/karma/config-unit.js --single-run"
     },
     "types": "build/es2019/module.d.ts",
     "version": "2.1.50"
